--- a/colocation-sample-fusion/Packages/manifest.json
+++ b/colocation-sample-fusion/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "com.meta.xr.colocation": "file:../../colocation-package",
+    "com.meta.xr.sdk.all": "64.0.0",
     "com.meta.xr.sdk.platform": "59.0.0",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.collections": "2.1.4",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.nuget.mono-cecil": "1.10.2",
+    "com.unity.nuget.mono-cecil": "1.11.4",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
